# myivo

./: .dockerignore  .eslintrc.json  .gitignore  .prettierrc.json  Dockerfile  Gruntfile.coffee  LICENSE  README.md  bower.json  esbuild.js  fly.toml  index.html  justfile  package-lock.json  package.json  tsconfig.json
coffee/: header.coffee  main.coffee  scrobblar.coffee
frontend/: esbuild.js  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/css/: defaults.css  header.css  main.css  projects.css  scrobblar.css  tailwind.css
frontend/src/scss/: _header.scss
frontend/src/ts/: htmx.ts  logo.ts  main.ts  scrobblar.ts
frontend/src/ts/three/: FontLoader.ts  TextGeometry.ts
html/: index.html
js/: main.js
jscoff/: header.js  header.js.map  main.js  main.js.map  scrobblar.js  scrobblar.js.map
nginx_conf/: oivovio
sass/: _defaults.scss  _header.scss  _projects.scss  _scrobblar.scss  main.scss
server/: Cargo.toml
server/files/: index.html
server/src/: am_auth_flow.rs  index.rs  main.rs  scrapers.rs  scrobble.rs  scrobble_monitor.rs
server/src/scrapers/: apple_music.rs  backloggd.rs  letterboxd.rs
server/templates/: am-auth-flow.html  index.html  scrobble.html
src/scss/: _defaults.scss  _header.scss  _projects.scss
src/ts/: header.ts  logo.ts  scrobblar.ts
src/ts/three/: FontLoader.ts  TextGeometry.ts
ts/: header.ts  logo.ts  main.ts  scrobblar.ts
