[package]
name = "myivo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.6"
reqwest = "0.11.10"
tokio = { version = "1.18.2", features = ["full"] }
tower-http = { version = "0.3.3", features = ["fs", "trace"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
