[package]
name = "myivo-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
askama = "0.14.0"
axum = "0.8.1"
cached = { version = "0.56.0", features = ["async"] }
reqwest = { version = "0.12.23", features = ["json"] }
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.18.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["compression-full", "fs", "trace", "set-header"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
